# KEA_SD_SI

./: LICENSE
00_Miscellaneous/: stripeiframe.html
01._modules/html_module/: index.html  index.js  myModule.js
01._modules/html_no_module/: index.html  index.js.js  myModule.js
01._modules/node_commonjs/: index.js  myModule.js
01._modules/node_esmodules/: index.js  myModule.js
01._modules/python/: test.py
02._data_formats/: me.csv
02._data_formats/car/: car.txt  car.yaml
02._data_formats/me/: me.json  me.txt  me.xml  me.yaml
03._file_parser/node_parser/: csv_parser.js  json_parser.js  txt_parser.js  xml_parser.js
03._file_parser/python_parser/: csv_parser.py  json_parser.py  txt_parser.py  xml_parser.py  yaml_parser.py
03._python_environments/pipenv/: Pipfile
03._python_environments/poetry/: pyproject.toml
04._basic_servers/car/: car.csv  car.json  car.xml
04._basic_servers/node/: app.js
04._basic_servers/python/: converter.py  main.py  pyproject.toml
06._server_to_server/python/: main.py  pyproject.toml
09.1._OpenAPI_task/: openapi.yaml  package-lock.json  package.json  server.js
13.1_github_webhooks/: package-lock.json  package.json  server.js
15._websockets/: package-lock.json  package.json  server.js
16._CORS/: app.js  package-lock.json  package.json
17._multipart-forms/: app.js  package-lock.json  package.json
18._redis/: app.js  package-lock.json  package.json  publisher.js  subscriber.js
21._sqlite/: app.js  champions.db  package-lock.json  package.json  setupDatabase.js
SMS/: package-lock.json  package.json  server.js
(+54 files in other folders)
