[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["kasper <kasperkbf@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
